deployment/pods.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fpl-api
spec:
  replicas: 1
  selector:
    matchLabels:
      component: api
  template:
    metadata:
      labels:
        component: api
    spec:
      containers:
        - name: api
          image: strangeloop1710/fpl-api
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fpl-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      component: frontend
  template:
    metadata:
      labels:
        component: frontend
    spec:
      containers:
        - name: frontend
          image: strangeloop1710/fpl-react
          imagePullPolicy: Always
          ports:
            - containerPort: 80
