deployment/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: fpl-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: frontend-service
              servicePort: 3000
          - path: /api/*
            backend:
              serviceName: api-service
              servicePort: 3001
